tests/files/type_checker_tests/should_pass/076.cmdr
//Test that post-increment operations type check
a = 1;
x = a++;
