tests/files/type_checker_tests/should_fail/105.cmdr
//Should fail post-increment on something of incorrect type
a = "hi";
a++;
